Add more screenshots + Clean up